--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">MursitAffandi-Baking</string>
+    <string name="main_error_icon_desc">flag_error_connection</string>
+    <string name="btn_rerequest">Retry</string>
+    <string name="food_title">Name food</string>
+    <string name="food_ingredient">food ingredient</string>
+    <string name="food_step">food_step</string>
+    <string name="food_servings">serving for</string>
 </resources>
