+ card food + adapter food + detail food activty
TODO
*  master detail flow for detail food
* widget recipe food

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="food_ingredient">food ingredient</string>
     <string name="food_step">food_step</string>
     <string name="food_servings">serving for</string>
+    <string name="title_activity_detail_food">DetailFoodActivity</string>
+    <string name="action_settings">Settings</string>
 </resources>
