+ master detail food
TODO
* enter food detail :
1. ingredient
2. step
3. detail step + exoplayer video

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="ingredient"> ingredient</string>
     <string name="step"> step</string>
     <string name="servingfor"> serving</string>
+    <string name="title_detailfood_list">Baking</string>
+    <string name="title_detailfood_detail">DetailFood Detail</string>
 </resources>
