+ layout master detail food
TODO
* enter logic food detail :
1. ingredient
2. step
3. detail step + exoplayer video

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="servingfor"> serving</string>
     <string name="title_detailfood_list">Baking</string>
     <string name="title_detailfood_detail">DetailFood Detail</string>
+    <string name="dummy_ingredient">sugar</string>
+    <string name="btn_next_step">Next</string>
+    <string name="btn_prev_step">Previous</string>
 </resources>
