+hadle image in item Food for load with Glide + saveinstacestate exoplayer position play, currentwindow, playwhenready
TODO
+ UI test esspresso

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="configure">Configure</string>
     <string name="add_widget">Add widget</string>
     <string name="widget_title">Ingredients of %s</string>
+    <string name="item_food">item food</string>
 </resources>
